# tCam-mini-with-Tensorflow-Lite

./: CMakeLists.txt  README.md  image_conversion_test.ipynb  sdkconfig  sdkconfig.old
components/cmd/: cmd_utilities.c  cmd_utilities.h  json_utilities.c  json_utilities.h
components/sys/: sys_utilities.c  sys_utilities.h  (+1 more)
main/: CMakeLists.txt  ctrl_task.c  google_sheet_cert.pem  lep_task.c  main.c  net_cmd_task.c  rsp_task.c  rsp_task.h  system_config.h  tflite_task.cc  tflite_task.h
main/image_utils/: CMakeLists.txt  tf_task.h
main/static_images/: CMakeLists.txt
main/static_images/sample_images/: daisy_01s.rgb  dandelion_01s.rgb  dandelion_02s.rgb
main/tflite_models/: CMakeLists.txt  flower_model_data.cc  flower_model_data.h  flower_model_settings.cc  flower_model_settings.h
main/tflite_models/floor_wetness_v1/: floor_wetness_v1.cc  floor_wetness_v1.h  floor_wetness_v1_settings.cc  floor_wetness_v1_settings.h
main/tflite_models/floor_wetness_v10/: floor_wetness_v10.cc  floor_wetness_v10.h  floor_wetness_v10_settings.cc  floor_wetness_v10_settings.h
main/tflite_models/floor_wetness_v12/: floor_wetness_v12.cc  floor_wetness_v12.h  floor_wetness_v12_settings.cc  floor_wetness_v12_settings.h
main/tflite_models/floor_wetness_v13/: floor_wetness_v13.cc  floor_wetness_v13.h  floor_wetness_v13_settings.cc  floor_wetness_v13_settings.h
main/tflite_models/floor_wetness_v2/: floor_wetness_v2.cc  floor_wetness_v2.h  floor_wetness_v2_settings.cc  floor_wetness_v2_settings.h
main/tflite_models/floor_wetness_v3/: floor_wetness_v3.cc  floor_wetness_v3.h  floor_wetness_v3_settings.cc  floor_wetness_v3_settings.h
main/tflite_models/floor_wetness_v4/: floor_wetness_v4.cc
